--- a/root/styles/universal.css
+++ b/root/styles/universal.css
@@ -42,7 +42,7 @@ header {
     background-color: black;
     border: 3px solid white;
     border-radius: 10px;
-    z-index: 50;
+    z-index: 250;
 }
 
 #burger-top, .burger-middle, #burger-bottom{
@@ -90,7 +90,7 @@ header {
     top: 0;
     left: 0;
     width: 100%;
-    z-index: 1;
+    z-index: 200;
     transition: all 0.5s ease-out;
     padding-top: 140px;
 }
